--- a/assets/scss/_sectionDiscover.scss
+++ b/assets/scss/_sectionDiscover.scss
@@ -6,11 +6,11 @@
     padding: 120px 80px 140px;
 
     @media (max-width: 991px) {
-      padding: 88px 40px 0;
+      padding: 0 40px;
     }
 
     @media (max-width: 767px) {
-      padding: 130px 24px 0;
+      padding: 0 24px;
     }
 
     .list-item {
