--- a/assets/scss/_sectionFAQ.scss
+++ b/assets/scss/_sectionFAQ.scss
@@ -57,6 +57,11 @@
       font-size: 16px;
       line-height: 24px;
       color: var(--color-secondary);
+      font-family: var(--font-body);
+
+      @media (max-width: 991px) {
+        padding: 16px;
+      }
 
       p {
         &:not(:last-child) {
