--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -195,8 +195,8 @@
   }
 }
 .lg-image {
-  max-width: 840px;
-  max-height: 540px;
+  max-width: 840px !important;
+  max-height: 540px !important;
 }
 .lg-counter {
   display: none;
