--- a/assets/scss/_sectionDiscover.scss
+++ b/assets/scss/_sectionDiscover.scss
@@ -59,7 +59,7 @@
         }
       }
 
-      &-wrapper {
+      a.item-wrapper {
         &:hover {
           .item-text {
             color: var(--color-primary);
