--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -73,12 +73,12 @@
       }
     }
     .filter-body {
-      height: 0;
+      max-height: 0;
       transition: all 0.4s ease;
 
       background-color: var(--color-white);
       &.active {
-        height: auto;
+        max-height: 500px;
 
         .nav {
           clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
