--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -5,7 +5,10 @@
 
       background-color: #f4f1ec;
       &-link {
-        padding: 8px 12px;
+        padding: 15px 12px;
+        @media (max-width: 991px) {
+          padding: 8px 12px;
+        }
         &.active {
           background-color: transparent;
           .title {
