--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -272,7 +272,8 @@ main {
     transition: transform 0.3s cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  &:hover {
+  &:hover,
+  &.active {
     &::before {
       transform: scaleX(1);
       transform-origin: bottom left;
