--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -166,6 +166,10 @@
         display: flex;
         align-items: center;
 
+        a {
+          display: inline-block;
+        }
+
         &.left {
           display: flex;
           justify-content: flex-end;
