--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -180,15 +180,15 @@
     padding: 0;
     border-radius: 50%;
     border: 1px solid var(--color-secondary);
-    background-color: var(--color-secondary);
-    background-image: url("../../images/use/ic-close-white.svg");
+    background-color: transparent;
+    background-image: url("../../images/use/ic-close-brown.svg");
     background-repeat: no-repeat;
     background-position: center;
     transition: all 0.4s ease;
     right: 80px;
 
     &:hover {
-      border: 1px solid transparent;
+      border: 1px solid var(--color-primary);
       background-color: transparent;
       background-image: url("../../images/use/ic-close-gold.svg");
     }
