--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -88,7 +88,9 @@ main {
 .dropdown-custom {
   position: relative;
   cursor: default;
-
+  @media (max-width: 991px) {
+    transform: translateY(23px);
+  }
   &.has-hover {
     &:hover {
       .ic {
