--- a/assets/scss/_sectionFAQ.scss
+++ b/assets/scss/_sectionFAQ.scss
@@ -36,6 +36,7 @@
 
     .accordion-button {
       background-color: transparent;
+      gap: 24px;
       color: var(--color-secondary);
       box-shadow: none;
       padding: 24px;
