--- a/assets/scss/_sectionTestimonials.scss
+++ b/assets/scss/_sectionTestimonials.scss
@@ -6,6 +6,10 @@
   .testimonials-wapper {
     padding: 0 80px;
 
+    @media (max-width: 991px) {
+      padding: 0 40px;
+    }
+
     @media (max-width: 767px) {
       padding: 0 24px;
     }
