--- a/assets/scss/_global.scss
+++ b/assets/scss/_global.scss
@@ -2,8 +2,6 @@ body {
   background-color: #f4f1ec;
   font-family: var(--font-body);
   transition: background-color 0.4s ease;
-  overflow-x: hidden;
-  scroll-behavior: smooth;
 
   &.discover-active {
     background-color: var(--color-white);
@@ -336,10 +334,13 @@ main {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    width: 200px;
+    height: 104px;
 
     img {
-      width: 200px;
-      height: 104px;
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
     }
   }
 }
