--- a/assets/scss/_gallery.scss
+++ b/assets/scss/_gallery.scss
@@ -39,6 +39,20 @@
     width: 100%;
     height: 260px;
     cursor: pointer;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      pointer-events: none;
+      background-color: transparent;
+      transition: background-color 0.3s ease;
+    }
+    &:hover {
+      &::before {
+        background-color: rgba(0, 0, 0, 0.1);
+      }
+    }
     // aspect-ratio: 410 / 260;
     img {
       width: 100%;
