--- a/assets/scss/_newsList.scss
+++ b/assets/scss/_newsList.scss
@@ -18,6 +18,13 @@
   .news {
     &-img {
       margin-bottom: 28px;
+      width: 100%;
+      aspect-ratio: 400 / 260;
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
     }
     &-content {
       h3 {
