--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -185,7 +185,14 @@ footer {
 
       &__left {
         margin-top: auto;
-
+        display: flex !important;
+        gap: 40px;
+        @media (max-width: 767px) {
+          flex-direction: column;
+          align-items: center;
+          gap: 8px;
+          margin-top: 24px;
+        }
         a {
           &:hover {
             color: var(--color-white);
