--- a/assets/scss/_newsList.scss
+++ b/assets/scss/_newsList.scss
@@ -9,7 +9,7 @@
     gap: 80px 40px;
     @media (max-width: 991px) {
       grid-template-columns: 1fr 1fr;
-      gap: 40px;
+      gap: 64px;
     }
     @media (max-width: 767px) {
       grid-template-columns: 1fr;
@@ -26,7 +26,20 @@
         object-fit: cover;
       }
     }
+    &-item {
+      &:hover {
+        .underline-first {
+          &::before {
+            transform: scaleX(0);
+            transform-origin: bottom right;
+          }
+        }
+      }
+    }
     &-content {
+      @media (max-width: 767px) {
+        text-align: center;
+      }
       h3 {
         margin-bottom: 28px;
       }
