--- a/assets/scss/_reset.scss
+++ b/assets/scss/_reset.scss
@@ -58,4 +58,5 @@ body {
   text-rendering: optimizeLegibility !important;
   -webkit-font-smoothing: auto !important;
   -moz-osx-font-smoothing: grayscale !important;
+  overflow-x: hidden;
 }
