--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -188,10 +188,7 @@ footer {
         display: flex !important;
         gap: 40px;
         @media (max-width: 767px) {
-          flex-direction: column;
-          align-items: center;
-          gap: 8px;
-          margin-top: 24px;
+          display: none !important;
         }
         a {
           &:hover {
